fixing the overflow issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -293,6 +293,7 @@ table {
   width: 100%;
   height: 100%;
   padding: 0 2rem;
+  overflow-x: hidden;
 }
 @media screen and (max-width: 770px) {
   .dashboard {
