--- a/styles/pages/_dashboard.scss
+++ b/styles/pages/_dashboard.scss
@@ -12,6 +12,7 @@
 	width: 100%;
 	height: 100%;
 	padding: 0 2rem;
+	overflow-x: hidden;
 
 	@media screen and (max-width: 770px) {
 		margin-top: 7.5rem;
